@@ -64,6 +64,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|BytesRef
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|locationtech
 operator|.
 name|spatial4j
@@ -143,20 +157,6 @@ operator|.
 name|impl
 operator|.
 name|RectangleImpl
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|BytesRef
 import|;
 end_import
 
@@ -928,6 +928,12 @@ argument_list|(
 name|this
 operator|.
 name|term
+argument_list|,
+operator|new
+name|byte
+index|[
+literal|8
+index|]
 argument_list|)
 expr_stmt|;
 name|this
@@ -1315,21 +1321,34 @@ name|BytesRef
 name|result
 parameter_list|)
 block|{
-if|if
-condition|(
-name|isLeaf
-condition|)
-block|{
-name|term
-operator||=
-literal|0x1L
-expr_stmt|;
-block|}
-return|return
+name|result
+operator|=
 name|getTokenBytesNoLeaf
 argument_list|(
 name|result
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|isLeaf
+argument_list|()
+condition|)
+block|{
+name|result
+operator|.
+name|bytes
+index|[
+literal|8
+operator|-
+literal|1
+index|]
+operator||=
+literal|0x1L
+expr_stmt|;
+comment|// set leaf
+block|}
+return|return
+name|result
 return|;
 block|}
 annotation|@
@@ -1349,17 +1368,39 @@ name|result
 operator|==
 literal|null
 condition|)
-return|return
+block|{
+name|result
+operator|=
 operator|new
 name|BytesRef
 argument_list|(
-name|bytes
-argument_list|,
-name|b_off
-argument_list|,
-name|b_len
+literal|8
 argument_list|)
-return|;
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|result
+operator|.
+name|bytes
+operator|.
+name|length
+operator|<
+literal|8
+condition|)
+block|{
+name|result
+operator|.
+name|bytes
+operator|=
+operator|new
+name|byte
+index|[
+literal|8
+index|]
+expr_stmt|;
+block|}
 name|result
 operator|.
 name|bytes
@@ -1369,6 +1410,10 @@ argument_list|(
 name|this
 operator|.
 name|term
+argument_list|,
+name|result
+operator|.
+name|bytes
 argument_list|)
 expr_stmt|;
 name|result
@@ -1381,12 +1426,22 @@ name|result
 operator|.
 name|length
 operator|=
+literal|8
+expr_stmt|;
+comment|// no leaf
 name|result
 operator|.
 name|bytes
-operator|.
-name|length
+index|[
+literal|8
+operator|-
+literal|1
+index|]
+operator|&=
+operator|~
+literal|1
 expr_stmt|;
+comment|// clear last bit (leaf bit)
 return|return
 name|result
 return|;
@@ -1410,6 +1465,7 @@ name|PackedQuadCell
 operator|)
 name|fromCell
 decl_stmt|;
+comment|//TODO clear last bit without the condition
 specifier|final
 name|long
 name|thisTerm
@@ -1490,6 +1546,12 @@ argument_list|(
 name|longToByteArray
 argument_list|(
 name|thisTerm
+argument_list|,
+operator|new
+name|byte
+index|[
+literal|8
+index|]
 argument_list|)
 argument_list|,
 literal|0
@@ -1499,6 +1561,12 @@ argument_list|,
 name|longToByteArray
 argument_list|(
 name|fromTerm
+argument_list|,
+operator|new
+name|byte
+index|[
+literal|8
+index|]
 argument_list|)
 argument_list|,
 literal|0
@@ -2128,18 +2196,12 @@ name|longToByteArray
 parameter_list|(
 name|long
 name|value
-parameter_list|)
-block|{
+parameter_list|,
 name|byte
 index|[]
 name|result
-init|=
-operator|new
-name|byte
-index|[
-literal|8
-index|]
-decl_stmt|;
+parameter_list|)
+block|{
 for|for
 control|(
 name|int
