@@ -146,120 +146,6 @@ begin_import
 import|import
 name|org
 operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|context
-operator|.
-name|SpatialContext
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|context
-operator|.
-name|SpatialContextFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|shape
-operator|.
-name|Point
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|shape
-operator|.
-name|Rectangle
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|shape
-operator|.
-name|Shape
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|shape
-operator|.
-name|ShapeCollection
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|shape
-operator|.
-name|SpatialRelation
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|locationtech
-operator|.
-name|spatial4j
-operator|.
-name|shape
-operator|.
-name|impl
-operator|.
-name|RectangleImpl
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
 name|apache
 operator|.
 name|lucene
@@ -487,6 +373,120 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|context
+operator|.
+name|SpatialContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|context
+operator|.
+name|SpatialContextFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|shape
+operator|.
+name|Point
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|shape
+operator|.
+name|Rectangle
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|shape
+operator|.
+name|Shape
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|shape
+operator|.
+name|ShapeCollection
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|shape
+operator|.
+name|SpatialRelation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|locationtech
+operator|.
+name|spatial4j
+operator|.
+name|shape
+operator|.
+name|impl
+operator|.
+name|RectangleImpl
 import|;
 end_import
 
@@ -1070,6 +1070,96 @@ argument_list|(
 name|SpatialOperation
 operator|.
 name|Contains
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testPackedQuadPointsOnlyBug
+specifier|public
+name|void
+name|testPackedQuadPointsOnlyBug
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|setupQuadGrid
+argument_list|(
+literal|1
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+comment|// packed quad.  maxLevels doesn't matter.
+name|setupCtx2D
+argument_list|(
+name|ctx
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|PrefixTreeStrategy
+operator|)
+name|strategy
+operator|)
+operator|.
+name|setPointsOnly
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|Point
+name|point
+init|=
+name|ctx
+operator|.
+name|makePoint
+argument_list|(
+literal|169.0
+argument_list|,
+literal|107.0
+argument_list|)
+decl_stmt|;
+name|adoc
+argument_list|(
+literal|"0"
+argument_list|,
+name|point
+argument_list|)
+expr_stmt|;
+name|commit
+argument_list|()
+expr_stmt|;
+name|Query
+name|query
+init|=
+name|strategy
+operator|.
+name|makeQuery
+argument_list|(
+operator|new
+name|SpatialArgs
+argument_list|(
+name|SpatialOperation
+operator|.
+name|Intersects
+argument_list|,
+name|point
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|executeQuery
+argument_list|(
+name|query
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|numFound
 argument_list|)
 expr_stmt|;
 block|}
